--- a/public/style.css
+++ b/public/style.css
@@ -22,28 +22,13 @@ body {
   margin: 0 auto;
 }
 
-button, select {
+select {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   font-size: 12px;
   color: #fff;
   background-color: #111;
   border: 2px solid #fff;
-  margin: 10px;
-}
-
-button {
-  border-radius: 15px;
-  padding: 2px 10px;
-  cursor: pointer;
-}
-
-button:hover {
-  transform: scale(1.1);
-}
-
-.start-button {
-  font-size: 14px;
-  font-weight: bold;
+  margin: 8px;
 }
 
 @media screen and (min-width: 500px) {
@@ -51,8 +36,8 @@ button:hover {
     padding: 60px;
   }
 
-  button, select, .start-button {
-    font-size: 16px;
-    margin: 20px;
+  select {
+    font-size: 18px;
+    margin: 14px;
   }
 }
